--- a/app/src/main/res/layout/activity_bloodavailblitypage.xml
+++ b/app/src/main/res/layout/activity_bloodavailblitypage.xml
@@ -1,9 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/_20sdp"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Bloodavailblitypage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_170sdp"
+            android:layout_marginVertical="@dimen/_10sdp"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            app:cardCornerRadius="@dimen/_17sdp"
+            app:cardElevation="@dimen/_10sdp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/card"/>
+
+
+            <ImageView
+                android:layout_width="@dimen/_70sdp"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/doctor"
+                android:layout_marginLeft="@dimen/_10sdp"/>
+
+            <ImageView
+                android:layout_width="@dimen/_90sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:src="@drawable/pending"
+                android:cropToPadding="true"
+                android:layout_gravity="right"/>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/_20sdp"
+                    android:layout_marginVertical="@dimen/_10sdp"
+                    android:text="Kingshuk Mondal"
+                    android:padding="@dimen/_4sdp"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:textColor="@color/specialgreen"/>
+                <TextView
+                    android:id="@+id/datebirth"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/_12sdp"
+                    android:gravity="right"
+                    android:text="DOB : 29-06-2001"
+                    android:padding="@dimen/_4sdp"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:textColor="@color/specialgreen"/>
+
+
+                <TextView
+                    android:id="@+id/dateofissue"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/_12sdp"
+                    android:gravity="right"
+                    android:text="Submission :29-06-2001"
+                    android:padding="@dimen/_4sdp"
+                    android:textStyle="bold"
+                    android:textColor="@color/specialgreen"/>
+
+
+                <TextView
+                    android:id="@+id/amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/_12sdp"
+                    android:gravity="right"
+                    android:text="Rs 15000"
+                    android:padding="@dimen/_4sdp"
+                    android:textStyle="bold"
+                    android:textColor="@color/specialgreen"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_170sdp"
+        android:layout_marginVertical="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        app:cardCornerRadius="@dimen/_17sdp"
+        app:cardElevation="@dimen/_10sdp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/card"/>
+
+
+        <ImageView
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_70sdp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/doctor"
+            android:layout_marginLeft="@dimen/_10sdp"/>
+
+        <ImageView
+            android:layout_width="@dimen/_90sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:src="@drawable/approved"
+            android:cropToPadding="true"
+            android:layout_gravity="right"/>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="@dimen/_5sdp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/_20sdp"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:text="Kingshuk Mondal"
+                android:padding="@dimen/_4sdp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:textColor="@color/specialgreen"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/_12sdp"
+                android:gravity="right"
+                android:text="DOB : 29-06-2001"
+                android:padding="@dimen/_4sdp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:textColor="@color/specialgreen"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/_12sdp"
+                android:gravity="right"
+                android:text="Submission :29-06-2001"
+                android:padding="@dimen/_4sdp"
+                android:textStyle="bold"
+                android:textColor="@color/specialgreen"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/_12sdp"
+                android:gravity="right"
+                android:text="Rs 15000"
+                android:padding="@dimen/_4sdp"
+                android:textStyle="bold"
+                android:textColor="@color/specialgreen"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+</LinearLayout>
+
