--- a/app/src/main/res/layout/activity_mediciinecostpage.xml
+++ b/app/src/main/res/layout/activity_mediciinecostpage.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#07DBF4BD"
     tools:context=".Mediciinecostpage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/specialgreen"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_back"
+
+            android:padding="@dimen/_20sdp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="#FFFFFF"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:id="@+id/et_searchmedicine"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_box1"
+            android:backgroundTint="@color/specialgreen"
+            android:textColor="@color/white"
+            android:textColorHint="#FFFFFF"
+            android:hint="Enter your serch here"
+            android:maxLines="1"
+            android:maxLength="20"
+            android:textStyle="bold"
+            android:drawableEnd="@drawable/ic_baseline_search_24"
+            android:drawableTint="#FFF5F5"
+            android:paddingHorizontal="@dimen/_20sdp"/>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/medicinerecyclerview"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+</LinearLayout>
