--- a/app/src/main/res/layout/activity_pathologycostpage.xml
+++ b/app/src/main/res/layout/activity_pathologycostpage.xml
@@ -1,9 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="#07DBF4BD"
     tools:context=".Pathologycostpage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/specialgreen"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_back"
+            android:padding="@dimen/_20sdp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="#FFFFFF"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_search"
+            android:layout_gravity="right"
+            android:padding="@dimen/_20sdp"
+            android:src="@drawable/ic_baseline_search_24"
+            app:tint="#FFFFFF"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/searchbox"
+        android:visibility="gone"
+        android:orientation="horizontal">
+    <EditText
+        android:layout_width="0dp"
+        android:layout_weight="4"
+        android:id="@+id/et_searchmedicine"
+        android:layout_height="match_parent"
+        android:background="@drawable/round_box1"
+        android:backgroundTint="@color/specialgreen"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFF"
+        android:hint="Enter your serch here"
+        android:maxLines="1"
+        android:maxLength="20"
+        android:textStyle="bold"
+        android:paddingHorizontal="@dimen/_20sdp"/>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="@color/specialgreen"
+            android:id="@+id/end_Search"
+            android:layout_gravity="right"
+            android:padding="@dimen/_20sdp"
+            android:src="@drawable/ic_baseline_close_24"
+            app:tint="#FFFFFF"/>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/pathologyrv"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+</LinearLayout>
