--- a/app/src/main/res/layout/activity_raiseacomplain.xml
+++ b/app/src/main/res/layout/activity_raiseacomplain.xml
@@ -1,9 +1,403 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context=".Raiseacomplain">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/back"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:padding="@dimen/_10sdp"
+            app:tint="@color/specialgreen"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="Complain"
+            android:textStyle="bold"
+            android:textSize="@dimen/_20sdp"
+            android:textColor="@color/specialgreen"
+            android:gravity="center"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:padding="@dimen/_10sdp"
+            app:tint="@color/specialgreen"/>
+
+    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="@dimen/_45sdp"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/specialgreen"
+                android:textSize="@dimen/_13sdp"
+                android:text="Name and DOB"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_15sdp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/borderimage"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:orientation="vertical">
+                <EditText
+                    android:id="@+id/patientname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:backgroundTint="@color/white"
+                    android:hint="Patient's name"
+                    android:maxLength="30"
+                    android:textSize="@dimen/_13sdp"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#4F000000"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/specialgreen"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_marginHorizontal="@dimen/_15sdp"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/dateofbirth"
+                    android:layout_height="match_parent"
+                    android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
+                    android:drawableTint="@color/specialgreen"
+                    android:backgroundTint="@color/white"
+                    android:textColor="@color/black"
+                    android:hint="Date of Birth"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_13sdp"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:layout_centerInParent="true"
+                    android:inputType="date"
+                    android:maxLength="40"
+                    android:layout_marginVertical="@dimen/_5sdp"
+                    android:textColorHint="#4F000000"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
+
+
+
+
+            </LinearLayout>
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/specialgreen"
+                android:textSize="@dimen/_12sdp"
+                android:text="Query details"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_15sdp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@drawable/borderimage"
+                android:layout_marginVertical="@dimen/_10sdp"
+
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/hospitalname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:backgroundTint="@color/white"
+                    android:hint="Hopital name"
+                    android:maxLength="25"
+                    android:textSize="@dimen/_13sdp"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#4F000000"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/specialgreen"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_marginHorizontal="@dimen/_15sdp"/>
+
+                <EditText
+                    android:id="@+id/pathname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:backgroundTint="@color/white"
+                    android:hint="Medical or Pathology name"
+                    android:maxLength="20"
+                    android:textSize="@dimen/_15sdp"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#4F000000"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/specialgreen"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_marginHorizontal="@dimen/_15sdp"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/dateofdouments"
+                    android:layout_height="match_parent"
+                    android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
+                    android:drawableTint="@color/specialgreen"
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:paddingHorizontal="@dimen/_5sdp"
+                    android:backgroundTint="@color/white"
+                    android:textSize="@dimen/_13sdp"
+                    android:textColor="@color/black"
+                    android:hint="Date"
+                    android:textStyle="bold"
+                    android:maxLines="1"
+                    android:layout_centerInParent="true"
+                    android:inputType="date"
+                    android:maxLength="40"
+                    android:textColorHint="#4F000000"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/specialgreen"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_marginHorizontal="@dimen/_15sdp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_15sdp"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:id="@+id/amount1"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/borderimage"
+                        android:textColor="@color/black"
+                        android:hint="Charged Amount"
+                        android:paddingLeft="@dimen/_15sdp"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/_12sdp"
+                        android:gravity="center_vertical"
+                        android:maxLines="1"
+                        android:inputType="numberDecimal"
+                        android:maxLength="40"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:textColorHint="#5B000000"
+                        android:paddingHorizontal="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        />
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:id="@+id/amount2"
+                        android:background="@drawable/borderimage"
+                        android:layout_height="match_parent"
+                        android:textSize="@dimen/_12sdp"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="@dimen/_10sdp"
+                        android:textColor="@color/black"
+                        android:hint="Original Amount"
+                        android:paddingVertical="@dimen/_15sdp"
+                        android:paddingLeft="@dimen/_10sdp"
+                        android:textStyle="bold"
+                        android:maxLines="1"
+                        android:layout_centerInParent="true"
+                        android:inputType="numberDecimal"
+                        android:maxLength="40"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:textColorHint="#6F000000"
+                        />
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/specialgreen"
+                android:textSize="@dimen/_12sdp"
+                android:text="Aadhar details"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_15sdp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/borderimage"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:orientation="vertical">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/aadhar"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:backgroundTint="@color/white"
+                    android:hint="0000 0000 0000 (AADHAR NO.)"
+                    android:maxLength="15"
+                    android:textSize="@dimen/_13sdp"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#4F000000"
+                    android:textStyle="bold" />
+
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/specialgreen"
+                android:textSize="@dimen/_12sdp"
+                android:text="upload documents"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_15sdp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_80sdp"
+                android:id="@+id/uploaddocuments"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="@dimen/_80sdp"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:backgroundTint="#69F0AE"
+                app:cardElevation="@dimen/_2sdp"
+                app:cardCornerRadius="@dimen/_30sdp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/upload"
+                    android:padding="@dimen/_30sdp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Documents in PDF"
+                    android:layout_gravity="bottom"
+                    android:gravity="center"
+                    android:textAllCaps="true"
+                    android:textSize="@dimen/_10sdp"
+                    android:textStyle="bold"
+                    android:layout_marginVertical="@dimen/_10sdp"
+                    android:textColor="@color/specialgreen"/>
+            </androidx.cardview.widget.CardView>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#66000000"
+                android:text="hello"
+                android:textSize="@dimen/_10sdp"
+                android:paddingVertical="@dimen/_10sdp"
+                android:id="@+id/docid"/>
+
+
+
+
+
+
+
+
+
+
+            <CheckBox
+                android:id="@+id/check"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:textSize="@dimen/_13sdp"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:checked="false"
+                android:textColor="@color/light_blue_900"
+                android:paddingHorizontal="@dimen/_10sdp"
+                android:text="I Agree that all the Details entered are correct and valid"/>
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/submit"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_15sdp"
+        android:textStyle="bold"
+        android:text="Submit"
+        android:background="@color/specialgreen"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:paddingVertical="@dimen/_10sdp"></TextView>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
