--- a/app/src/main/res/layout/activity_complain_status.xml
+++ b/app/src/main/res/layout/activity_complain_status.xml
@@ -4,108 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/absttract2"
     tools:context=".ComplainStatus">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/back"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:background="@color/specialgreen"
-        android:text="Complain Status"
-        android:gravity="center_horizontal"
-        android:paddingVertical="@dimen/_60sdp"
-        android:textSize="@dimen/_20sdp"
-        android:fontFamily="sans-serif-condensed"/>
+        android:layout_height="@dimen/_55sdp"
+        android:layout_marginTop="@dimen/_35sdp"
+        android:orientation="horizontal"
+        android:layout_gravity="top">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:padding="@dimen/_15sdp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/black" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:textColor="@color/black"
+            android:layout_weight="3"
+            android:text="Complain status"
+            android:fontFamily="@font/val"
+            android:textSize="@dimen/_20sdp"
+            android:gravity="center"/>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:visibility="invisible"
+            android:layout_weight="1"
+            android:padding="@dimen/_10sdp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/white" />
+
+    </LinearLayout>
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/_120sdp"
+        android:layout_marginHorizontal="@dimen/_45sdp"
         android:layout_marginTop="@dimen/_130sdp"
-        android:backgroundTint="#FFFFFF"
-        app:cardCornerRadius="@dimen/_30sdp" >
+        android:backgroundTint="#00BFA5"
+        app:cardCornerRadius="@dimen/_25sdp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/val"
+            android:text="Status"
+            android:textColor="#FF6D00"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_110sdp"
-            app:cardCornerRadius="@dimen/_10sdp"
-            app:cardElevation="@dimen/_3sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginLeft="@dimen/_40sdp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_50sdp"
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_90sdp"
-                android:id="@+id/totalcount"
-                android:textSize="@dimen/_40sdp"
-                android:text="10"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:textSize="@dimen/_20sdp"
-                android:layout_gravity="bottom"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_weight="1"
                 android:text="Total"
-                android:textStyle="bold"
-                android:textColor="#FFF"
-                android:background="@color/specialgreen"
-                android:gravity="center"/>
-
-        </androidx.cardview.widget.CardView>
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_110sdp"
-            app:cardCornerRadius="@dimen/_10sdp"
-            app:cardElevation="@dimen/_3sdp"
-            android:layout_gravity="right"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_40sdp">
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_90sdp"
-                android:id="@+id/setelled"
-                android:textSize="@dimen/_40sdp"
-                android:text="6"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_15sdp"
-                android:layout_gravity="bottom"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/totalcount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="0"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_weight="1"
                 android:text="Approved"
-                android:textStyle="bold"
-                android:textColor="#FFF"
-                android:background="@color/specialgreen"
-                android:gravity="center"/>
-        </androidx.cardview.widget.CardView>
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/setelled"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="0"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
 
 
-
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="@dimen/_300sdp"
-           android:layout_gravity="center"
-           android:layout_marginTop="@dimen/_80sdp"
-           android:orientation="vertical">
-           <androidx.recyclerview.widget.RecyclerView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:id="@+id/recyclerviewcards">
-           </androidx.recyclerview.widget.RecyclerView>
-
-       </LinearLayout>
-
-
-
-
-
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_120sdp"
+        android:orientation="vertical">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerviewcards">
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>'
+
+
+
+
 
 
 
