--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,7 +21,7 @@
         android:backgroundTint="#18701C">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_60sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:orientation="horizontal">
 
@@ -29,9 +29,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="3"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="Categories"
-                android:gravity="left"
+                android:gravity="left|bottom"
                 android:textColor="@color/white"
 
                 android:textStyle="bold"
@@ -41,6 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="end"
+                android:paddingBottom="@dimen/_30sdp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
                 <ImageView
@@ -316,5 +317,16 @@
     </LinearLayout>
 
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Version  1.01"
+        android:textSize="@dimen/_10sdp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:fontFamily="@font/val"
+        android:layout_marginTop="@dimen/_30sdp"/>
 
 </LinearLayout>
